--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@ html {
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
 }
 
+.content-container {
+    max-width: 1156px;
+}
+
 .content-container h1 {
     font-size: 36pt;
     margin-bottom: 1.5rem;
@@ -19,10 +23,6 @@ html {
 .content-container p {
     margin-bottom: 1.5rem;
     text-align: justify;
-}
-
-.content-container p:first-of-type {
-    font-weight: bold;
 }
 
 a:hover {
